liferay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-liferay
spec:
  selector:
    matchLabels:
      run: my-liferay
  replicas: 2
  template:
    metadata:
      labels:
        run: my-liferay
    spec:
      containers:
      - name: my-liferay
        image: liferay/portal:7.3.0-ga1
        ports:
        - containerPort: 8080
