ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: application-test
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Content-Type "nosniff";
      proxy_set_header Content-Security-Policy "default-src 'self' * 'unsafe-inline' 'unsafe-eval';";
      proxy_set_header X-XSS-Protection "1; mode=block";
      proxy_set_header X-Frame-Options "SAMEORIGIN";
spec:
  rules:
  - host: lab.test
    http:
      paths:
      - path: /web/guest
        backend:
          serviceName: my-liferay
          servicePort: 8080
      - path: /.*(.jsp|.txt|.css|.js|.ico)$
        backend:
          serviceName: my-liferay
          servicePort: 8080
      - path: /(image|o|combo|c)
        backend:
          serviceName: my-liferay
          servicePort: 8080
      - path: /*
        backend:
          serviceName: my-nginx
          servicePort: 80
